# jnt-django-admin-tools

./: .editorconfig  .eslintrc.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  Dockerfile  Makefile  README.rst  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
docs/: conf.py  decorators.rst  fields.rst  index.rst  widgets.rst
scripts/: lint.sh
src/admin_tools/: __init__.py  admin.py  apps.py  autocomplete_filter.py  checks.py  decorators.py  deprecate_utils.py  mixins.py  tests.py  urls.py  utils.py  views.py
src/admin_tools/dashboard/: apps.py  dashboards.py  modules.py  views.py
src/admin_tools/dashboard/templatetags/: admin_tools_dashboard_tags.py
src/admin_tools/db/fields/: __init__.py  generic_foreign_key.py
src/admin_tools/fields/: __init__.py  permissions.py
src/admin_tools/menu/: forms.py  items.py  models.py  views.py
src/admin_tools/menu/templatetags/: admin_tools_menu_tags.py
src/admin_tools/services/: objects.py  urls.py
src/admin_tools/widgets/: autocomplete.py  permissions.py
src/jnt_admin_tools/: __init__.py  admin.py  apps.py  autocomplete_filter.py  checks.py  decorators.py  deprecate_utils.py  mixins.py  template_loaders.py  tests.py  urls.py  utils.py  views.py
src/jnt_admin_tools/admin/: __init__.py  base.py  base_admin.py  base_admin_tools.py  base_changeform_submit.py  changeform_submits_set.py  changeform_tools_set.py  changelist_tools_set.py  content_type.py
src/jnt_admin_tools/admin/fields/: changelist.py
src/jnt_admin_tools/admin/mixins/: __init__.py  admin_tools.py  changeform_submits.py
src/jnt_admin_tools/dashboard/: __init__.py  apps.py  dashboards.py  forms.py  models.py  modules.py  registry.py  tests.py  urls.py  utils.py  views.py
src/jnt_admin_tools/dashboard/templatetags/: admin_tools_dashboard_tags.py
src/jnt_admin_tools/db/fields/: generic_foreign_key.py
src/jnt_admin_tools/fields/: __init__.py  permissions.py
src/jnt_admin_tools/helpers/: views.py
src/jnt_admin_tools/list_filters/: __init__.py  model_autocomplete.py
src/jnt_admin_tools/menu/: __init__.py  apps.py  forms.py  items.py  menus.py  models.py  tests.py  urls.py  utils.py  views.py
src/jnt_admin_tools/menu/admin/: __init__.py  admin_menu_item.py
src/jnt_admin_tools/menu/migrations/: 0001_initial.py
src/jnt_admin_tools/menu/templatetags/: admin_tools_menu_tags.py
src/jnt_admin_tools/mixins/: __init__.py  admin_clickable_links.py  autocomplete.py  autocomplete_changelist_filters.py  autocomplete_changelist_filters_admin.py  autocomplete_fields.py  base.py  base_generic_foreign_key.py  clickable_links.py  generic_foreign_key.py  generic_foreign_key_inline.py  readonly_widgets.py
src/jnt_admin_tools/services/: object_links.py  objects.py  readonly_form_field.py  urls.py
src/jnt_admin_tools/templates/admin/: change_form_object_tools.html  change_list_object_tools.html  submit_line.html
src/jnt_admin_tools/templatetags/: admin_list.py  admin_modify.py  permissions_widget_tags.py  submit_buttons.py
src/jnt_admin_tools/theming/: apps.py
src/jnt_admin_tools/widgets/: __init__.py  autocomplete.py  generic_foreign_key.py  permissions.py  permissions_readonly.py
test_proj/: dashboard.py  manage.py  menu.py  settings.py  urls.py  wsgi.py
test_proj/test_app/: admin.py  filters.py  forms.py  models.py  tests.py
test_proj/test_app/admin_tools/: __init__.py  bbc_site.py  google_site.py  yandex_site.py
test_proj/test_app/changeform_submits/: __init__.py  reload.py
test_proj/test_app/migrations/: 0001_initial.py  0002_auto_20190610_1412.py  0003_auto_20190626_1006.py  0004_baz_content_type.py  0005_blog_comment.py  0006_auto_20190723_1548.py  0007_auto_20190723_1646.py  0008_auto_20190724_0957.py  0009_auto_20190724_1329.py  0010_auto_20201119_1844.py  0011_alter_blog_tags.py
(+57 files in other folders)
