[tool.poetry]
name = "jnt-django-admin-tools"
version = "0.12.6"
description="A collection of tools for the django administration interface"
authors = ["Junte <tech@junte.ru>"]
classifiers=[
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Framework :: Django :: 3.2',
        'Topic :: Software Development :: Libraries :: Python Modules'
]

packages = [
    { include = "jnt_admin_tools", from ="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2"

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "*"
dennis = "*"
xenon = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
flake8 = "*"
flake8-pytest-style = "*"
flake8-coding = "*"
pytest-freezegun = "*"
wemake-python-styleguide = "*"
black = "*"
flake8-class-attributes-order = "*"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | .*\/migrations
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
